--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -19,9 +19,12 @@ a { color: #333; }
 .syn-centerExt{
   display: inline-block;
   float: none;
-   }
+ }
    
-.syn-right{ text-align: right; }
+.syn-right{ 
+  text-align: right; 
+  padding-right: 38px;
+}
 .syn-plus{margin-top: 25px;}
 .smallImg{
   width : 95.94px;
@@ -65,6 +68,20 @@ li a:hover{
   width: 100%;
   height: initial;
 }
+.small-image{
+  width: 35%;
+  height: initial;
+}
+.tiny-image{
+  width: 18%;
+  height: initial;
+}
+.center-div{
+  text-align: center;
+}
+.right-div{
+  text-align: right;
+}
 .margin-top{
   margin-top: 25px;
 }
@@ -87,6 +104,9 @@ li a:hover{
   border-bottom: 1px solid #473728;
   padding-top: 10px;
 }
+.sosmedpage{
+  padding-top: 10px;
+}
 .footer{
   display: inline-block;
   width: 100%;
@@ -95,8 +115,14 @@ li a:hover{
   padding-bottom: 5px;
 }
 
+.fontserif{
+  font-family: serif;
+}
+
 .sosmed a { margin-right: 15px; }
 .sosmed a .fa { font-size: 24px; }
+.sosmedpage a { margin-right: 15px; }
+.sosmedpage a .fa { font-size: 24px; }
 .content-story p{text-align: justify;}
 .title-story {text-align: center;}
 .story-box:nth-child(odd){
