--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -102,7 +102,7 @@ li a:hover{
 .pict-box{
   width: 100%;
   height: 200px;
-  background-size: cover;
+  background-size: contain;
 }
 .page-article{border-bottom: 1px solid #E9E2DB;}
 .sosmed{
