--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -324,6 +324,13 @@ footer.parent .license {
   text-align: justify;
 }
 
+/*=============================================================================================*/
+/*RESPONSIVE*/
+.privacy span{
+  display: inline-block;
+  width: 200px;
+}
+
 
 /*=============================================================================================*/
 /*=============================================================================================*/
