--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -330,6 +330,23 @@ footer.parent .license {
   display: inline-block;
   width: 200px;
 }
+/*=============================================================================================*/
+/*video*/
+/*home video*/
+.video{
+  position: relative;
+}
+.video-cover{
+  position: absolute;
+  background-color: rgba(0, 0, 0,0.3);
+  left:0%;
+  right:0%;
+  top:0%;
+  bottom:0%;
+  width: 100%;
+  height: 100%;
+
+}
 
 
 /*=============================================================================================*/
