--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -340,7 +340,7 @@ footer.parent .license {
 }
 .video-cover{
   position: absolute;
-  background-color: rgba(0, 0, 0,0.3);
+  background-color: rgba(255, 255, 255,0.3);
   left:0%;
   right:0%;
   top:0%;
@@ -348,6 +348,25 @@ footer.parent .license {
   width: 100%;
   height: 100%;
 
+}
+.video-cover .title-video{
+  position: absolute;
+  bottom: 10%;
+  left: 10%;
+}
+.video-player-little{position: relative;}
+.video-cover-little{
+  position: absolute;
+  /*background-color: rgba(255, 255, 255,0.3);*/
+  background:  url("../PICS/playbutton.png")no-repeat;
+  height: 100px;
+  width: 100px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-size: cover;
 }
 
 .media span:first-child {
