--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -386,6 +386,7 @@ footer.parent .license {
   background-size: cover;
 
 }
+.content .detail-content p{ text-align: justify; }
 
 
 .media span:first-child {
