--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -333,6 +333,11 @@ footer.parent .license {
   display: inline-block;
 }
 /*=============================================================================================*/
+/*shop*/
+.left-menu{
+  background-color : #F1F1F2;
+}
+/*=============================================================================================*/
 /*video*/
 /*home video*/
 .video{
