--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -271,9 +271,43 @@ footer.parent .license {
 
 /*=============================================================================================*/
 /* MAP MARKER */
+.maps { 
+  position: relative; 
+  margin-bottom: 20px;
+}
+
+.maps img { 
+  width: 100%;
+}
+
 .map-marker {
   position: absolute;
   z-index: 2;
+}
+
+.map-marker .caption {
+  display: none;
+  position: absolute;
+  top: 20px;
+  padding: 5px 10px;
+  left: 2px;
+  white-space: nowrap;
+  z-index: 3;
+  background: #000;
+  color: #fff;
+}
+
+.map-marker:hover .caption { display: block; }
+.map-marker .caption:after{
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: -5px;
+  left: 10px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid black;
 }
 
 .marker { position: relative; display: inline-block; width: 45px; }
@@ -281,7 +315,7 @@ footer.parent .license {
   width: 30px;
   height: 30px;
   border-radius: 50% 50% 50% 0;
-  background: #89849b;
+  background: #F1625F;
   position: absolute;
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
@@ -312,7 +346,7 @@ footer.parent .license {
   width: 14px;
   height: 14px;
   margin: 8px 0 0 8px;
-  background: #2f2f2f;
+  background: #ECEBEA;
   position: absolute;
   border-radius: 50%;
 }
@@ -938,16 +972,18 @@ footer.parent .license {
 
   .login-form{
     margin: unset;
+  }
+
+  .map-marker { display: none }
 }
 
 /* small */
 @media (min-width: 768px) and (max-width: 991px) {
   
-  
 }
 /* medium */
 @media (min-width: 992px) and (max-width: 1199px) {
-  
+  .map-marker { display: none }
 }
 /* large */
 @media (min-width: 1200px) {
