--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -769,6 +769,18 @@ footer.parent .license {
   left: 10%;
 }
 
+.video-box .layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
 .video-box .caption h1 {
   color:  #fff;
 }
