--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -22,6 +22,7 @@ a { color: #333; }
   text-align: right; 
   padding-right: 38px;
 }
+.syn-fixed-right { float: right; }
 .syn-plus{margin-top: 25px;}
 
 .btn-default:hover,
@@ -713,6 +714,10 @@ footer.parent .license {
   font-weight: bold;
 }
 
+.blog-box.justify {
+  text-align: justify;
+}
+
 .blog-box .blog-pic img {
   width: 100%;
 }
@@ -748,12 +753,29 @@ footer.parent .license {
   left: 0;
   height: 100%;
   padding: 40px 30px 40px 80px;
+  overflow-y: auto;
   z-index: 3;
 }
 .left-menu .title {
   margin-bottom: 30px;
   font-weight: bold;
 }
+
+.left-menu ul {
+  padding: 0;
+  display: block;
+}
+
+.left-menu ul li {
+  list-style: none;
+  display: block;
+}
+
+.left-menu ul li a {
+  display: block;
+  padding: 10px 0;
+}
+
 .product-list {
   padding: 20px 40px  40px 40px;
 }
@@ -942,6 +964,74 @@ footer.parent .license {
   background-color: #366797;
   color: #fff;
 }
+
+/*=============================================================================================*/
+/*BACK TO TOP*/
+#back-to-top {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    z-index: 9999;
+    padding: 15px;
+    text-align: center;
+    line-height: 30px;
+    background: #444;
+    color: #f5f5f5;
+    cursor: pointer;
+    border: 0;
+    border-radius: 2px;
+    text-decoration: none;
+    transition: opacity 0.2s ease-out;
+    opacity: 0;
+}
+
+#back-to-top:hover {
+    background: #111;
+}
+
+#back-to-top.show {
+  opacity: 1;
+}
+
+
+/*=============================================================================================*/
+/*LOADER*/
+
+img,
+#status {
+  -webkit-transition: opacity 0.4s;
+     -moz-transition: opacity 0.4s;
+      -ms-transition: opacity 0.4s;
+          transition: opacity 0.4s;
+}
+
+.is-loading {
+  background-color: black;
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/loading.gif');
+}
+
+.is-broken {
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/broken.png');
+  background-color: #be3730;
+  width: 120px;
+}
+
+.is-loading img,
+.is-broken img {
+  opacity: 0;
+}
+
+#status {
+  opacity: 0;
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  background: hsla( 0, 0%, 0%, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  z-index: 2; /* over other stuff */
+}
+
 /*=============================================================================================*/
 /*=============================================================================================*/
 /*RESPONSIVE*/
@@ -980,21 +1070,26 @@ footer.parent .license {
   .navbar-shortcut {
     position: initial;
     width: 100%;
-    margin-top: 5px;
+    margin: 15px 0
   }
   
   /*=============================================================================================*/
   /* BREADCRUMB */
-  .breadcrumb { margin-top: 50px; padding-left: 0 }
+  .breadcrumb { margin-top: 60px; padding-left: 0 }
 
   /*=============================================================================================*/
   /* ARTICLE */
   #articles-section { margin-top: 20px }
+  .page-article  { padding: 25px }
 
   /*=============================================================================================*/
   /**/
   main.parent,
   main.parent.clear { margin-top: 0 }
+
+  .small-image { width: 70% }
+  .medium-image { width: 100% }
+
 }
 
 /* extra small to small */
@@ -1018,6 +1113,14 @@ footer.parent .license {
   /* NAVBAR */
   .navbar-default .navbar-brand { text-align: left; }
   .navbar-shortcut { top: 10px; }
+  .navbar-shortcut .form-control,
+  .navbar-shortcut .btn {
+      height: 45px;
+  }
+
+  /*=============================================================================================*/
+  /* BREADCRUMB */
+  .breadcrumb { padding-left: 35px; }
 
   /*=============================================================================================*/
   /* ARTICLE */
@@ -1028,6 +1131,17 @@ footer.parent .license {
   }
 
   .map-marker { display: none }
+  .left-menu{
+    background-color : #F1F1F2;
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding: 10px 35px;
+    z-index: 0;
+  }
+
+  .left-menu ul { display: none }
+  .left-menu ul li a { padding: 20px 0; }
 }
 
 /* small */
